--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - name: build
         run: mvn compile
+        working-directory: ./src
   test:
     name: test
     runs-on: self-hosted
@@ -14,6 +15,7 @@ jobs:
     steps:
       - name: test
         run: mvn test
+        working-directory: ./src
   package:
     name: package
     runs-on: self-hosted
@@ -21,6 +23,7 @@ jobs:
     steps:
       - name: package
         run: mvn package
+        working-directory: ./src
   deploy:
     name: deploy
     runs-on: self-hosted
