--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -5,9 +5,16 @@ jobs:
     name: build
     runs-on: self-hosted
     steps:
-      - name: build
-        run: mvn compile
-        working-directory: ./src
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - run: mvn compile
+      - uses: actions/upload-artifact@v2
+        with:
+          name: game2048compiled
+          path: ./target/*
   test:
     name: test
     runs-on: self-hosted
