--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,29 +20,34 @@ jobs:
     runs-on: self-hosted
     needs: build
     steps:
-      - name: test
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
         run: mvn test
-        working-directory: ./src
   package:
     name: package
     runs-on: self-hosted
     needs: build
     steps:
-      - name: package
-        run: mvn package
-        working-directory: ./src
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+      - run: mvn package
+      - uses: actions/upload-artifact@v2
+        with:
+          name: game2048package
+          path: ./target/*.war
   deploy:
     name: deploy
     runs-on: self-hosted
     needs: package
+    environment:
+      name: DeployEnvironment
+      url: http://localhost:8081/game2048
     steps:
-      - name: deploy_test
-        run: |
-          docker rm --force tomcat
-          docker image rm --force game2048
-          echo -e 'FROM tomcat:9.0.46-jdk11 \n COPY ./target/game2048.war /usr/local/tomcat/webapps' | docker build -t game2048 -f- .
-          docker run --rm -d --name tomcat -p 8080:8080 game2048
-      - name: deploy_stop
-        run: |
-          docker rm --force tomcat
-          docker image rm --force game2048
+      - name: Deploy Servlet
+        run: cp -f ./target/*.war /usr/local/tomcat/webapps
